# fast-alphashape

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
benches/: bench.py  points.rs
python/fast_alphashape/: __init__.py  alphashape.py
src/: lib.rs  main.rs
tests/: conftest.py  test_fast_alphashape.py
tests/resources/: lines.geojson
