[package]
name = "fast-alphashape"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_fast_alphashape"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
python-source = "python"
name = "fast_alphashape._fast_alphashape"

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3-py37"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = { version = "0.17.2" }
openblas-src = { version = "0.10.5" }
ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
delaunator = { version = "1.0.1" }
itertools = { version = "0.10.5" }
rayon = { version = "1.6.0" }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.4.0", features = ["html_reports"] }
ndarray-rand = "0.14.0"

[[bench]]
name = "points"
harness = false
